# a2a-firewall

./: .gitignore  HANDOFF.md  PPT_AGENT_CONTEXT.md  README.md  a2a_firewall_mvp_plan.md  docker-compose.yml  render.yaml  start.cmd
backend/: .dockerignore  .env.example  Makefile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.cmd  smoke_test.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: agents.py  firewall.py  policies.py  review.py  schemas.py  stats.py  tasks.py  violations.py  workspaces.py
backend/app/core/: config.py  security.py  telemetry.py
backend/app/db/: database.py  models.py
backend/app/detection/: layer0_preflight.py  layer1_schema.py  layer2_permissions.py  layer3_rules.py  layer4_groq.py  layer5_decision.py  orchestrator.py
backend/db/: init.sql
backend/scripts/: bank_agent_mesh.py  dev.sh  run_demo.sh  seed.py
backend/src/a2a_firewall/: main.py
backend/src/a2a_firewall/api/: deps.py
backend/src/a2a_firewall/api/routes/: agents.py  auth.py  delegation.py  demo.py  firewall.py  identity.py  policies.py  review.py  schemas.py  simulation.py  stats.py  tasks.py  telemetry.py  violations.py  workspaces.py
backend/src/a2a_firewall/core/: config.py  delegation.py  identity.py  rate_limit.py  security.py  signing.py  telemetry.py
backend/src/a2a_firewall/db/: database.py  models.py
backend/src/a2a_firewall/db/migrations/: env.py  script.py.mako
backend/src/a2a_firewall/db/migrations/versions/: 001_initial.py  003_resource_access.py  (+1 more)
backend/src/a2a_firewall/detection/: layer0_preflight.py  layer1_schema.py  layer2_permissions.py  layer3_rules.py  layer4_groq.py  layer5_decision.py  orchestrator.py
backend/tests/: conftest.py
backend/tests/attack_corpus/: circular_spawn.json  context_poisoning.json  deep_chain.json  giant_payload.json  instruction_smuggling.json  role_override.json
backend/tests/e2e/: test_demo_scenario.py
backend/tests/integration/: test_firewall_endpoint.py  test_multi_tenant_isolation.py
backend/tests/unit/: test_attack_corpus.py  test_identity_delegation.py  test_policy_decision.py  test_rule_engine.py
sdk/: pyproject.toml
sdk/a2a_firewall/: __init__.py  client.py
sdk/examples/: demo_attack.py  planner_agent.py
sdk/tests/: test_client.py
(+103 files in other folders)
