[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-firewall-backend"
version = "0.1.0"
description = "Inter-agent governance mesh backend"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["a2a_firewall*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
"src/a2a_firewall/__init__.py" = ["F401"]  # allow unused imports in __init__

[tool.ruff.lint.isort]
known-first-party = ["a2a_firewall"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["groq.*", "opentelemetry.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: integration tests (requires running services)",
    "e2e: end-to-end tests (requires running services)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]