[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-firewall-sdk"
version = "0.1.0"
description = "SDK for the A2A Firewall inter-agent governance mesh"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]
[project.optional-dependencies]
otel = ["opentelemetry-api>=1.27.0"]
